<resources>
    <string name="app_name">Assignment Task2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="item">ITEM</string>
    <string name="bill">BILL</string>
    <string name="select_item">Select Item</string>
    <string name="samosa">Samosa</string>
    <string name="Order">Order</string>
    <string name="Item_fragment">Item Fragment</string>
    <string name="bill_fragment">Bill Fragment</string>
    <string name="enter_item_name">Enter Item Name</string>
    <string name="enter_item">Enter Item</string>
    <string name="add">ADD</string>
    <string name="enter_name">Enter Item Name</string>
    <string name="enter_quantity">Enter Quantity</string>
    <string name="Do_you_want_to_delete_this_item">Do You Want To Delete This Item</string>
    <string name="item_name">Item Name</string>
    <string name="quantity">Quantity</string>
    <string name="update">UPDATE</string>
    <string-array name="itemsNames">Items Name</string-array>
</resources>