<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/sp_30">
    <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/enter_name"
    android:textSize="@dimen/sp_30"
    android:textStyle="bold"/>
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/enter_item"
        android:id="@+id/etEnterItem"
        android:textSize="@dimen/sp_30"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_quantity"
        android:textSize="@dimen/sp_30"
        android:textStyle="bold"/>
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/enter_quantity"
        android:id="@+id/etEnterQuantity"
        android:inputType="number"
        android:textSize="@dimen/sp_30"/>
    <com.google.android.material.button.MaterialButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add"
        android:layout_gravity="center"
        android:id="@+id/btnAdd"/>
</LinearLayout>