<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BillFragment">
<Spinner
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/lvList_Array_Adapter" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/item_name"
        android:textAlignment="center"
        android:layout_below="@id/lvList_Array_Adapter"
        android:layout_marginTop="@dimen/sp_50"
        android:id="@+id/item"
        android:textSize="@dimen/sp_30"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnFabAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/baseline_add_24"
        android:layout_marginTop="@dimen/sp_50"
        android:layout_marginStart="@dimen/sp_20"
        android:layout_below="@+id/item"/>
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/quantity"
        android:id="@+id/etEnterQuantity"
        android:inputType="number"
        android:textSize="@dimen/sp_30"
        android:layout_below="@+id/item"
        android:layout_marginTop="@dimen/sp_50"
        android:layout_toEndOf="@id/btnFabAdd"/>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnFabSub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/baseline_horizontal_rule_24"
        android:layout_below="@+id/item"
        android:layout_toEndOf="@+id/etEnterQuantity"
        android:layout_marginTop="@dimen/sp_50"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Order"
        android:id="@+id/btnOrder"
        android:textStyle="bold"
        android:textSize="@dimen/sp_20"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/sp_90"
        android:layout_marginStart="@dimen/sp_90"
        android:layout_below="@id/etEnterQuantity"/>

</RelativeLayout>